# cache-bench

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: aos_vs_soa.hpp  matrix.hpp  predecessor.hpp  segtree.hpp  template.hpp  vector_vs_list.hpp
include/: counters.hpp  harness.hpp  plugin.hpp  print.hpp  utils.hpp
src/: counters.cpp  main.cpp
